@@ -1,11 +1,10 @@
-FROM gradle:4.10-jdk8-alpine as builder
-USER root
-WORKDIR /builder
-ADD . /builder
-RUN gradle build --stacktrace
+FROM gradle:7.4.1 AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build
 
-FROM openjdk:8-jre-alpine
-WORKDIR /app
+FROM openjdk:8-jre-slim
 EXPOSE 8080
-COPY --from=builder /builder/build/libs/comercial-0.0.1-SNAPSHOT.jar .
-CMD ["java", "-jar", "comercial-0.0.1-SNAPSHOT.jar"]
+COPY --from=build /home/gradle/src/build/libs/comercial-0.0.1-SNAPSHOT-plain.jar /app/
+RUN bash -c 'touch /app/comercial-0.0.1-SNAPSHOT-plain.jar'
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/comercial-0.0.1-SNAPSHOT-plain.jar"]
